--- a/Modelio/Cas d utilisation/.runtime/projectInfo.html
+++ b/Modelio/Cas d utilisation/.runtime/projectInfo.html
@@ -4,13 +4,13 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>Info</title>
 
-<link rel='stylesheet' href='file:///C:/Users/franc/.modelio/5.3/opensource-cache/conf/org.eclipse.osgi/261/0/.cp/res/bootstrap.min.css' type='text/css'></link>
-<link rel='stylesheet' href='file:///C:/Users/franc/.modelio/5.3/opensource-cache/conf/org.eclipse.osgi/261/0/.cp/res/projectInfo.css' type='text/css'></link>
+<link rel='stylesheet' href='file:///C:/Users/douau/.modelio/5.3/opensource-cache/conf/org.eclipse.osgi/261/0/.cp/res/bootstrap.min.css' type='text/css'></link>
+<link rel='stylesheet' href='file:///C:/Users/douau/.modelio/5.3/opensource-cache/conf/org.eclipse.osgi/261/0/.cp/res/projectInfo.css' type='text/css'></link>
 
 
-<script src='file:///C:/Users/franc/.modelio/5.3/opensource-cache/conf/org.eclipse.osgi/261/0/.cp/res/projectInfo.js' type='text/javascript'></script>
-<script src='file:///C:/Users/franc/.modelio/5.3/opensource-cache/conf/org.eclipse.osgi/261/0/.cp/res/jquery-3.3.1.slim.min.js' type='text/javascript'></script>
-<script src='file:///C:/Users/franc/.modelio/5.3/opensource-cache/conf/org.eclipse.osgi/261/0/.cp/res/bootstrap.bundle.min.js' type='text/javascript'></script>
+<script src='file:///C:/Users/douau/.modelio/5.3/opensource-cache/conf/org.eclipse.osgi/261/0/.cp/res/projectInfo.js' type='text/javascript'></script>
+<script src='file:///C:/Users/douau/.modelio/5.3/opensource-cache/conf/org.eclipse.osgi/261/0/.cp/res/jquery-3.3.1.slim.min.js' type='text/javascript'></script>
+<script src='file:///C:/Users/douau/.modelio/5.3/opensource-cache/conf/org.eclipse.osgi/261/0/.cp/res/bootstrap.bundle.min.js' type='text/javascript'></script>
 
 
 <script type="text/javascript">
@@ -48,7 +48,7 @@
 			</tr>
 			<tr>
 				<td class="label">Chemin :</td>
-				<td>C:\Users\franc\Documents\Quiz\Modelio\Cas d utilisation</td>
+				<td>C:\Users\douau\Desktop\SAE 3.02\Quiz\Quiz\Modelio\Cas d utilisation</td>
 			</tr>
 			<tr style="display: none;">
 				<td class="label">Emplacement distant :</td>
@@ -60,7 +60,7 @@
 			</tr>
 			<tr>
 				<td class="label">Derni&egrave;re modification :</td>
-				<td>04-10-2023 16:28:58</td>
+				<td>15-10-2023 00:12:31</td>
 			</tr>
 		</table>
 	</section>
@@ -71,19 +71,19 @@
 				<div class="col-md">
 					<h3>Mod&egrave;les de travail</h3>
 					<div class="contentlist" id="AccordionContainerWorkModels">				
-					<div class='listitem'><span><img src="file:///C:/Users/franc/.modelio/5.3/opensource-cache/conf/org.eclipse.osgi/310/0/.cp/icons/exmlfragment.png"> Cas d utilisation</span></div>				
+					<div class='listitem'><span><img src="file:///C:/Users/douau/.modelio/5.3/opensource-cache/conf/org.eclipse.osgi/310/0/.cp/icons/exmlfragment.png"> Cas d utilisation</span></div>				
 					</div>
 				</div>
 				<div class="col-md">
 					<h3>Biblioth&egrave;ques</h3>
 					<div class="contentlist" id="AccordionContainerLibraries">				
-					<div class='listitem'><span data-toggle="tooltip" data-html="true" title="Predefined types model component provides the default types for UML and Analyst models."><img src="file:///C:/Users/franc/.modelio/5.3/opensource-cache/conf/org.eclipse.osgi/310/0/.cp/icons/ramcfragment.png"> PredefinedTypes 3.9.00</span></div>				
+					<div class='listitem'><span data-toggle="tooltip" data-html="true" title="Predefined types model component provides the default types for UML and Analyst models."><img src="file:///C:/Users/douau/.modelio/5.3/opensource-cache/conf/org.eclipse.osgi/310/0/.cp/icons/ramcfragment.png"> PredefinedTypes 3.9.00</span></div>				
 					</div>
 				</div>
 				<div class="col-md">
 					<h3>Modules</h3>
 					<div class="contentlist">				
-					<div class='listitem'><img src="file:///C:/Users/franc/.modelio/5.3/opensource-cache/conf/org.eclipse.osgi/310/0/.cp/icons/mdafragment.png"> ModelerModule 9.3.00</div>				
+					<div class='listitem'><img src="file:///C:/Users/douau/.modelio/5.3/opensource-cache/conf/org.eclipse.osgi/310/0/.cp/icons/mdafragment.png"> ModelerModule 9.3.00</div>				
 					</div>
 				</div>
 			</div>
