--- a/Modelio/Digramme de classe/.runtime/projectInfo.html
+++ b/Modelio/Digramme de classe/.runtime/projectInfo.html
@@ -48,7 +48,7 @@
 			</tr>
 			<tr>
 				<td class="label">Chemin :</td>
-				<td>C:\Users\franc\Documents\Quiz\Modelio\Digramme de classe</td>
+				<td>E:\Quiz\Modelio\Digramme de classe</td>
 			</tr>
 			<tr style="display: none;">
 				<td class="label">Emplacement distant :</td>
@@ -60,7 +60,7 @@
 			</tr>
 			<tr>
 				<td class="label">Derni&egrave;re modification :</td>
-				<td>26-10-2023 14:48:00</td>
+				<td>15-11-2023 11:42:54</td>
 			</tr>
 		</table>
 	</section>
